--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,10 +3,10 @@ name: Build and Test
 on:
   push:
     branches:
-      - '**'
-  pull_request: 
+      - "**"
+  pull_request:
     branches:
-      - '**' 
+      - "**"
 
 jobs:
   build-and-test:
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
-          cache: 'npm' # 종속성 캐싱
+          cache: "npm" # 종속성 캐싱
 
       # 의존성 설치
       - name: Install dependencies
@@ -48,6 +48,5 @@ jobs:
           files: ./coverage/lcov.info # Jest가 생성한 커버리지 파일
           flags: unittests # 커버리지 업로드에 플래그 추가 (옵션)
           token: ${{ secrets.CODECOV_TOKEN }} # Codecov 업로드 토큰
-          flags: unittests            # 플래그로 커버리지 그룹화
-          fail_ci_if_error: true      # Codecov 업로드 실패 시 CI 실패 처리
-          verbose: true               # 디버그 정보 출력
+          fail_ci_if_error: true # Codecov 업로드 실패 시 CI 실패 처리
+          verbose: true # 디버그 정보 출력
