--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/testing-library__jest-dom": "^6.0.0",
+    "cypress": "^13.16.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "jest": "^29.7.0",
