fix: custom-node-executo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,27 @@ version: 2.1
 orbs:
   cypress: cypress-io/cypress@3
 
+executors:
+  custom-node-executor:
+    docker:
+      - image: cypress/base:18.18.0
+
 workflows:
   build-and-test:
     jobs:
       - cypress/run:
-          start-command: "npm install && npm run start"
+          executor: custom-node-executor # 커스텀 실행자 사용
+          pre-steps:
+            - checkout # 코드 체크아웃
+            - run:
+                name: Install dependencies
+                command: npm install
+            - run:
+                name: Build project
+                command: npm run build
+            - run:
+                name: Start production server
+                command: |
+                  npm run start &
+                  npx wait-on http://localhost:3000  # 로컬 서버가 실행될 때까지 기다림
+          browser: chrome # 브라우저 선택 (선택 사항, 기본값은 Electron)
