--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 executors:
   custom-node-executor:
     docker:
-      - image: node:18.18.0-bullseye
+      - image: cypress/browsers:node-18.18.0-chrome107-ff102
 
 jobs:
   cypress-tests:
@@ -24,6 +24,11 @@ jobs:
           command: |
             npm run start & 
             npx wait-on http://localhost:3000 --timeout 120000
+      - run:
+          name: Start Xvfb
+          command: |
+            Xvfb :99 -screen 0 1920x1080x24 & 
+            export DISPLAY=:99
       - cypress/run-tests
 
 workflows:
